# web-system-monitoring

./: Cargo.toml  readme.md
src/: main.rs  system.rs
web/: index.html  script.js  style.css
